# WW

./: .gitignore  CMakeLists.txt  README.md  build.sh
abacus/: CMakeLists.txt  abacus_func_param.hpp  abacus_type.h
abacus/core/: buffer.hpp  common.h  context.hpp  data_traits.h  device.h  env.hpp  shape.hpp  target_traits.h  target_wrapper.h  tensor.hpp  tensor_op.cpp  tensor_op.h
abacus/core/impl/cuda/: cuda_device.cpp  cuda_runtime_api.cpp
abacus/core/impl/hip/: hip_device.cpp  hip_runtime_api.cpp
abacus/core/impl/x86/: x86_device.cpp  x86_runtime_api.cpp
abacus/func/: func_base.hpp  gemm.hpp
abacus/func/impl/: impl_base.hpp  impl_common.h  impl_gemm.h
abacus/func/impl/cuda/: abacus_gemm.h
abacus/func/impl/cuda/cu/: CMakeLists.txt  abacus_gemm.cu
abacus/func/impl/hip/: abacus_gemm.h
abacus/func/impl/hip/gcn_assemble/: asm.sh
abacus/func/impl/x86/: abacus_gemm.h
abacus/func/impl/x86/cxx/: abacus_gemm.cpp
cmake/: altas.cmake  compiler_options.cmake  cuda.cmake  dependencies.cmake  hip.cmake  utils.cmake
cmake/config/: ww_config.h.in
test/: CMakeLists.txt
test/abacus/: test_abacus_base.hpp  test_abacus_func.hpp  test_abacus_gemm.cpp
utils/: common.h  timer.hpp
utils/log/: logger.h
utils/unit_test/: test_base.h  test_engine.h  test_suite.h
